# w06-validation-and-error-handling/w06-personal/controllers/authors.js
@@ -67,99 +67,98 @@ const postItem = async (req, res, next) => {
 };
 
 // // PUT
-// const putItem = async (req, res, next) => {
-// 	// #swagger.tags = ['Authors']
+const putItem = async (req, res, next) => {
+	// #swagger.tags = ['Authors']
 
-// 	// IMPORTANT
-// 	// This comment is required for the swagger-autogen tool
-// 	/*  #swagger.parameters['body'] = {
-//             in: 'body',
-//             required: false,
-//             schema: {
-// 								author_name: "any",
-// 								author_email: "any",
-// 								author_image: "any"
-//             }
-//   } */
+	// IMPORTANT
+	// This comment is required for the swagger-autogen tool
+	/*  #swagger.parameters['body'] = {
+            in: 'body',
+            required: false,
+            schema: {
+								author_name: "any",
+								author_email: "any",
+								author_image: "any"
+            }
+  } */
 
-// 	const collection = await mongodbInstance
-// 		.getDb()
-// 		.db(DATABASE)
-// 		.collection(COLLECTION);
+	const collection = await mongodbInstance
+		.getDb()
+		.db(DATABASE)
+		.collection(COLLECTION);
 
-// 	try {
-// 		const selectedId = req.params._id;
-// 		// Create a filter for items with the selected id
-// 		const filter = { _id: new ObjectId(selectedId) };
+	try {
+		const selectedId = req.params._id;
+		// Create a filter for items with the selected id
+		const filter = { _id: new ObjectId(selectedId) };
 
-// 		// Specify the update to set a value for the plot field
-// 		const updatedAuthor = {};
+		// Specify the update to set a value for the plot field
+		const updatedAuthor = {};
 
-// 		// Type alias UpdateFilter<TSchema>:
-// 		// https://mongodb.github.io/node-mongodb-native/6.3/types/UpdateFilter.html
-// 		const updateDoc = {
-// 			$set: updatedAuthor,
-// 		};
+		// Type alias UpdateFilter<TSchema>:
+		// https://mongodb.github.io/node-mongodb-native/6.3/types/UpdateFilter.html
+		const updateDoc = {
+			$set: updatedAuthor,
+		};
 
-// 		for (const key of Object.keys(req.body)) {
-// 			if (req.body[key] !== null) {
-// 				updatedAuthor[key] = req.body[key];
-// 			}
-// 		}
+		for (const key of Object.keys(req.body)) {
+			if (req.body[key] !== null) {
+				updatedAuthor[key] = req.body[key];
+			}
+		}
 
-// 		// Set the upsert option to insert a document if no documents match the filter
-// 		// Interface FindOneAndUpdateOptions:
-// 		// https://mongodb.github.io/node-mongodb-native/4.0/interfaces/findoneandupdateoptions.html
-// 		const options = { upsert: false };
+		// Set the upsert option to insert a document if no documents match the filter
+		// Interface FindOneAndUpdateOptions:
+		// https://mongodb.github.io/node-mongodb-native/4.0/interfaces/findoneandupdateoptions.html
+		const options = { upsert: false };
 
-// 		// Update the first document that matches the filter
-// 		var response = await collection.findOneAndUpdate(
-// 			filter,
-// 			updateDoc,
-// 			options
-// 		);
+		// Update the first document that matches the filter
+		var response = await collection.findOneAndUpdate(
+			filter,
+			updateDoc,
+			options
+		);
 
-// 		if (response != undefined) {
-// 			// Print the number of matching and modified documents
-// 			console.log(
-// 				`${response.matchedCount} document(s) matched the filter, updated ${response.modifiedCount} document(s)`
-// 			);
-// 			res.status(200);
-// 			res.json(response);
-// 			console.log("Item was updated.");
-// 		}
-// 	} catch (error) {
-// 		res.status(400).json({ message: "BAD REQUEST" });
-// 	}
-// };
+		if (response != undefined) {
+			// Print the number of matching and modified documents
+			console.log(
+				`${response.matchedCount} document(s) matched the filter, updated ${response.modifiedCount} document(s)`
+			);
+			res.status(200);
+			res.json(response);
+			console.log("Item was updated.");
+		}
+	} catch (error) {
+		res.status(400).json({ message: "BAD REQUEST" });
+	}
+};
 
-// // DELETE
-// const deleteItem = async (req, res, next) => {
-// 	// #swagger.tags = ['Authors']
-// 	var selectedId = req.params._id;
-// 	const collection = await mongodbInstance
-// 		.getDb()
-// 		.db(DATABASE)
-// 		.collection(COLLECTION);
+// DELETE
+const deleteItem = async (req, res, next) => {
+	// #swagger.tags = ['Authors']
+	var selectedId = req.params._id;
+	const collection = await mongodbInstance
+		.getDb()
+		.db(DATABASE)
+		.collection(COLLECTION);
 
-// 	try {
-// 		// Delete the item by ID
-// 		const response = await collection.deleteOne({
-// 			_id: new ObjectId(selectedId),
-// 		});
+	try {
+		// Delete the item by ID
+		const response = await collection.deleteOne({
+			_id: new ObjectId(selectedId),
+		});
 
-// 		if (response.deletedCount === 1) {
-// 			res.status(200).json({
-// 				message: `Item was deleted successfully.`,
-// 			});
-// 		} else {
-// 			res.status(404).json({ message: "Item not found" });
-// 		}
-// 	} catch (error) {
-// 		console.error(error);
-// 		res.status(500).json({ message: "Internal server error" });
-// 	}
-// };
+		if (response.deletedCount === 1) {
+			res.status(200).json({
+				message: `Item was deleted successfully.`,
+			});
+		} else {
+			res.status(404).json({ message: "Item not found" });
+		}
+	} catch (error) {
+		console.error(error);
+		res.status(500).json({ message: "Internal server error" });
+	}
+};
 
-// module.exports = { getData, getItem, deleteItem, postItem, putItem };
-module.exports = { getData, getItem, postItem };
+module.exports = { getData, getItem, deleteItem, postItem, putItem };
